--- a/frontend/src/components/Assignment_report/assignment_report.css
+++ b/frontend/src/components/Assignment_report/assignment_report.css
@@ -15,13 +15,24 @@
 
 #uploadandsubmitblock{
     position: relative;
-    display: grid;
+    display: flex;
 }
 
 .upload_button{
     width: 5rem;
     left: 0;
+    color: white;
+    height: 2rem;
     position: absolute;
+    background-color:#1E6A44;
+}
+
+.submit_button{
+    color: white;
+    width: 5rem;
+    height: 2rem;
+    margin-left: 1rem;
+    background-color: #A80B01;
 }
 
 #mytableblock-1{
