--- a/frontend/src/components/Assignment_report/assignment_report.css
+++ b/frontend/src/components/Assignment_report/assignment_report.css
@@ -13,6 +13,10 @@
     z-index: 1;
 }
 
+#inputfilechoose:active ~.upload_button {
+    transform: translateY(1px);
+}
+
 #uploadandsubmitblock {
     position: relative;
     display: flex;
