--- a/frontend/src/components/Assignment_report/assignment_report.css
+++ b/frontend/src/components/Assignment_report/assignment_report.css
@@ -26,6 +26,7 @@
     width: 5rem;
     left: 0;
     color: white;
+    border-radius: 5px;
     height: 2rem;
     position: absolute;
     background-color: #1E6A44;
@@ -35,6 +36,7 @@
     color: white;
     width: 5rem;
     height: 2rem;
+    border-radius: 5px;
     margin-left: 1rem;
     background-color: #A80B01;
 }
