--- a/frontend/src/components/Teacher_dashboard/Teacher_dashboard.css
+++ b/frontend/src/components/Teacher_dashboard/Teacher_dashboard.css
@@ -20,7 +20,7 @@ html {
 
 .dashblocks {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     margin-top: 2rem;
     border-radius: 50%;
     --bs-gutter-x: 0.;
