--- a/frontend/src/components/Assignment_Upload/upload_assignment.css
+++ b/frontend/src/components/Assignment_Upload/upload_assignment.css
@@ -13,7 +13,7 @@
     align-items: center;
     border: 3px dashed #cbd5e0;
     background-color: #edf2f7;
-    height: 11rem;
+    height: 13rem;
     min-height: 157px;
 }
 
@@ -24,6 +24,7 @@
 
 
 .file-inputs {
+    margin-top: 1rem;
     position: relative;
     margin-bottom: 1.5em;
 }
