--- a/frontend/src/components/Attendance list/attendance.css
+++ b/frontend/src/components/Attendance list/attendance.css
@@ -22,10 +22,7 @@ tr {
 }
 
 .button-1 {
- margin-bottom: 20rem;
- margin-left: 46%;
- margin-right: 46%;
-  width: 6%;
+ text-align: center;
 }
 
 
