--- a/frontend/src/components/Assignment_report/assignment_report.css
+++ b/frontend/src/components/Assignment_report/assignment_report.css
@@ -41,7 +41,7 @@
     background-color: #A80B01;
 }
 
-.submit_button:active {
+button:active {
     transform: translateY(1px);
 }
 
@@ -51,6 +51,7 @@
 
 #mytable-1 {
     overflow-x: auto;
+    
 }
 
 @media screen and (max-width : 1000px) {
@@ -59,5 +60,5 @@
         margin: 0 10%;
         width: 80%;
     }
-    
+
 }
