--- a/frontend/src/components/Teacher_dashboard/notifications.css
+++ b/frontend/src/components/Teacher_dashboard/notifications.css
@@ -2,7 +2,7 @@
 {
     padding-top: 8.3px;
     background-color: white;
-    margin: 10px;
+    margin-top: 10px;
     height: 50px;
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgb(219, 217, 217);
@@ -18,4 +18,5 @@
     .fontselect {
         font-size: 15px;
     }
+    
 }
